--- a/bc_knearestneighborsclassifier.ipynb
+++ b/bc_knearestneighborsclassifier.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "bc_knearestneighborsclassifier.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNUw4Ya0Um6m8ALtSljM3vI",
+      "authorship_tag": "ABX9TyMMa18AkgjiazUs+iLNUqU6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -44,13 +44,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "f608ceb1-6edc-4de0-a968-0ff9a48226be"
+        "outputId": "fb8326de-e627-4e19-df4b-1a337a957a5a"
       },
       "source": [
-        "dataset = pd.read_csv('breastcancer.csv')\n",
+        "dataset = pd.read_csv('breast cancer.csv')\n",
         "dataset.head()"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,7 +176,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 17
         }
       ]
     },
@@ -187,14 +187,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3b37e9dd-6cef-4b2b-bdf1-61fc544ce358"
+        "outputId": "cc5b13bd-de12-4b78-f737-dcb8ef2991d0"
       },
       "source": [
         "X = dataset.iloc[:, 1:-1].to_numpy()\n",
         "y = dataset.iloc[:, -1].to_numpy()\n",
         "X[23:25, :]"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -207,7 +207,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 18
         }
       ]
     },
@@ -220,7 +220,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state = 0)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -229,8 +229,34 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "L642eshEqNE8",
+        "outputId": "2ca375b8-57c8-49aa-8a6e-dc51a2644472"
+      },
+      "source": [
+        "unique_elements, counts_elements = np.unique(y_train, return_counts=True)\n",
+        "print(np.asarray((unique_elements, counts_elements)))\n",
+        "#(2 for benign, 4 for malignant)"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[  2   4]\n",
+            " [346 178]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "m2TsRe7-i06P",
-        "outputId": "6b05d62a-f0ee-401b-8b51-ded7a67c57b3"
+        "outputId": "6d3133db-5729-41e7-b662-8d10e3633879"
       },
       "source": [
         "from sklearn.impute import SimpleImputer\n",
@@ -238,7 +264,7 @@
         "X_train = imputer.fit_transform(X_train)\n",
         "X_train[23:25,:]"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -251,7 +277,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 21
         }
       ]
     },
@@ -265,7 +291,7 @@
         "sc = StandardScaler()\n",
         "X_train = sc.fit_transform(X_train)"
       ],
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -275,14 +301,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6e17393d-99ed-4f37-ff09-8e1dc1876125"
+        "outputId": "34108ba2-032d-42f3-cd24-415c6ce19072"
       },
       "source": [
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "classifier = KNeighborsClassifier(n_neighbors = 5, metric = 'minkowski', p = 2)\n",
         "classifier.fit(X_train, y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -296,7 +322,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 23
         }
       ]
     },
@@ -310,7 +336,7 @@
         "X_test = imputer.transform(X_test)\n",
         "X_test = sc.transform(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -321,7 +347,7 @@
       "source": [
         "y_pred = classifier.predict(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -331,15 +357,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Rzh59Lhy3pF4",
-        "outputId": "3ccabf3e-a331-4101-80fb-f1a02bc7c34e"
+        "outputId": "d1c7afe0-36c3-49d4-ec5f-3940b9fc4e0f"
       },
       "source": [
         "from sklearn.metrics import confusion_matrix, accuracy_score, roc_auc_score\n",
         "cm = confusion_matrix(y_test, y_pred)\n",
         "print(cm)\n",
-        "accuracy_score(y_test, y_pred)"
+        "# TP malignant 61\n",
+        "# TN benign 109\n",
+        "# FP 2\n",
+        "# FN 3"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -348,18 +377,6 @@
             " [  2  61]]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.9714285714285714"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 12
         }
       ]
     },
@@ -370,12 +387,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HbegLq-9Z891",
-        "outputId": "dd3bc284-ee5d-4fc4-abbe-076b8c17e7a9"
+        "outputId": "f296d4ed-8301-4e17-b1f5-f7118329f562"
       },
       "source": [
-        "roc_auc_score(y_test, y_pred)"
+        "roc_auc_score(y_test, y_pred) #winner!!!"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -387,7 +404,123 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SNLBdPtepNZ_",
+        "outputId": "4809d902-d16a-4ded-e319-e9fee3cf826b"
+      },
+      "source": [
+        "#Accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
+        "accuracy_score(y_test, y_pred)"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9714285714285714"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dggTzpKGsJKe",
+        "outputId": "3cb30b5a-91ec-4dc7-da7d-84256a5f8e08"
+      },
+      "source": [
+        "#Sensitivity = TP / (TP + FN) ability to determine the patient cases (malignant tumors) correctly\n",
+        "61/(61+3)"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.953125"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tByNYflNsVp9",
+        "outputId": "6aec7857-b38d-4526-f8bd-85710891947a"
+      },
+      "source": [
+        "#Specificity = TN / (TN + FP)  ability to determine the healthy cases (benign tumors) correctly\n",
+        "109/(109+2)"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9819819819819819"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DHOhXwHasVtb",
+        "outputId": "5008f82b-e906-4831-f311-0c074ddf9e87"
+      },
+      "source": [
+        "#Precision = TP / (TP + FP) the number of correct positive predictions made\n",
+        "61/(61+2)"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9682539682539683"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 31
         }
       ]
     }
