--- a/bc_decisiontreeclassifier.ipynb
+++ b/bc_decisiontreeclassifier.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "bc_decisiontreeclassifier.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOxf9zxKJcoKQOecEcY7FES",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyNLEsnBg1KQ4NjN8OfStNHt"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mehtamishah/Breast-Cancer-Detection/blob/main/bc_decisiontreeclassifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -33,7 +22,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -44,13 +33,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "8d4aa66e-3e0b-41ba-f0ba-51bee7a11a28"
+        "outputId": "8ca5c260-9e3b-4e4e-9a55-e50a1712762e"
       },
       "source": [
         "dataset = pd.read_csv('breastcancer.csv')\n",
         "dataset.head()"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,14 +176,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "77984984-1812-494b-ceef-8a7bc6fff9a2"
+        "outputId": "ddbc9492-4b60-4f07-e6f1-173d921e387a"
       },
       "source": [
         "X = dataset.iloc[:, 1:-1].to_numpy()\n",
         "y = dataset.iloc[:, -1].to_numpy()\n",
         "X[23:25, :]"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,7 +209,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state = 0)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -230,7 +219,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "eb213a5d-c74d-45c2-a243-a1fa11aa1574"
+        "outputId": "1f282f8b-ed1e-4f7d-dc2f-879717511eef"
       },
       "source": [
         "#Add feature scaling, not required\n",
@@ -239,7 +228,7 @@
         "X_train = imputer.fit_transform(X_train)\n",
         "X_train[23:25,:]"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -263,14 +252,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "726df727-b0c8-4cc5-8012-0d6124349a4a"
+        "outputId": "7273d473-1907-41b9-85fb-5f64e82fa60d"
       },
       "source": [
         "from sklearn.tree import DecisionTreeClassifier\n",
         "classifier = DecisionTreeClassifier(criterion = 'entropy', random_state = 0)\n",
         "classifier.fit(X_train, y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -300,7 +289,7 @@
         "#Prepping test data\n",
         "X_test = imputer.transform(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -311,7 +300,7 @@
       "source": [
         "y_pred = classifier.predict(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -321,15 +310,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a3fa0525-056d-4ee7-fc19-bdad134096c2"
+        "outputId": "e7a33d9b-f372-4d14-92a4-62df843bd753"
       },
       "source": [
         "from sklearn.metrics import confusion_matrix, accuracy_score, roc_auc_score\n",
         "cm = confusion_matrix(y_test, y_pred)\n",
-        "print(cm)\n",
-        "accuracy_score(y_test, y_pred)"
+        "print(cm)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,18 +326,6 @@
             " [  6  57]]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.9371428571428572"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
         }
       ]
     },
@@ -360,12 +336,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6270dd4c-b520-463e-9aef-6a992d24b62e"
+        "outputId": "3ee444eb-2c96-4ca3-ced5-bd0348c6cc8e"
       },
       "source": [
         "roc_auc_score(y_test, y_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,6 +354,122 @@
             "tags": []
           },
           "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4m_1b9km8Kjr",
+        "outputId": "9ef524dc-82c6-435b-fccc-5179dab2112f"
+      },
+      "source": [
+        "#Accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
+        "accuracy_score(y_test, y_pred)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9371428571428572"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SnzdIaAY7Q8T",
+        "outputId": "377d67ac-95de-40be-948d-dcc937c47ab0"
+      },
+      "source": [
+        "#Sensitivity = TP / (TP + FN) ability to determine the patient cases (malignant tumors) correctly\n",
+        "57/(57+5)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9193548387096774"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q-HQrsgl7RA6",
+        "outputId": "30b9f94f-495c-4d18-beb3-2112daac298e"
+      },
+      "source": [
+        "#Specificity = TN / (TN + FP)  ability to determine the healthy cases (benign tumors) correctly\n",
+        "107/(107+6)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9469026548672567"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JCiXcjJf75YT",
+        "outputId": "0c298689-3fea-416b-aa92-22cbde8da914"
+      },
+      "source": [
+        "#Precision = TP / (TP + FP) the number of correct positive predictions made\n",
+        "57/(57+6)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9047619047619048"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
         }
       ]
     }
