--- a/bc_naivebayesclassifier.ipynb
+++ b/bc_naivebayesclassifier.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "bc_naivebayesclassifier.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOKCVopjueD89zFD0UdYrR5",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyN8d8+Vy82idEE5wchwIsIG"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mehtamishah/Breast-Cancer-Detection/blob/main/bc_naivebayesclassifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -33,7 +22,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -44,13 +33,13 @@
           "height": 238
         },
         "id": "SvwTirQfwcHT",
-        "outputId": "bb186d7c-b757-4e4f-f9af-33fee648c038"
+        "outputId": "c6d49e3e-2bcf-443f-f91f-f4335b703fe1"
       },
       "source": [
         "dataset = pd.read_csv('breastcancer.csv')\n",
         "dataset.head()"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,14 +176,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c0d20e19-5ec1-4588-e6fb-f66e260399c2"
+        "outputId": "65e6060d-2db0-4fb4-9869-26b3794da0aa"
       },
       "source": [
         "X = dataset.iloc[:, 1:-1].to_numpy()\n",
         "y = dataset.iloc[:, -1].to_numpy()\n",
         "X[23:25, :]"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -220,7 +209,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state = 0)"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -230,7 +219,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CNhh1KIHk1QY",
-        "outputId": "1d09a669-77c1-42f5-84a1-793686416dc1"
+        "outputId": "14939110-62d4-41a5-9fe0-71dd405f8960"
       },
       "source": [
         "from sklearn.impute import SimpleImputer\n",
@@ -238,7 +227,7 @@
         "X_train = imputer.fit_transform(X_train)\n",
         "X_train[23:25,:]"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -265,7 +254,7 @@
         "sc = StandardScaler()\n",
         "X_train = sc.fit_transform(X_train)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -275,14 +264,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZQ5Y-YVLaIDF",
-        "outputId": "054ce49e-ee12-41b9-9845-f98a32b7db8b"
+        "outputId": "62332437-b13b-4fe3-f8d2-ec9529f3334f"
       },
       "source": [
         "from sklearn.naive_bayes import GaussianNB\n",
         "classifier = GaussianNB()\n",
         "classifier.fit(X_train, y_train)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -308,7 +297,7 @@
         "X_test = imputer.transform(X_test)\n",
         "X_test = sc.transform(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -319,7 +308,7 @@
       "source": [
         "y_pred = classifier.predict(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -329,15 +318,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZcgUdiZ6kS23",
-        "outputId": "e6afa23e-c579-416a-a54b-d107514a39c9"
+        "outputId": "5757742a-3a1d-4ea9-d32b-58fa65f3c44f"
       },
       "source": [
         "from sklearn.metrics import confusion_matrix, accuracy_score, roc_auc_score\n",
         "cm = confusion_matrix(y_test, y_pred)\n",
-        "print(cm)\n",
-        "accuracy_score(y_test, y_pred)"
+        "print(cm)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -346,18 +334,6 @@
             " [  2  61]]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.9542857142857143"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
         }
       ]
     },
@@ -368,12 +344,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-NbScMYkqjPm",
-        "outputId": "95619ba1-c1e8-47a8-ebd3-8ce9b57c3062"
+        "outputId": "94464180-6914-4f1a-dfda-7815ee838f94"
       },
       "source": [
         "roc_auc_score(y_test, y_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -386,6 +362,122 @@
             "tags": []
           },
           "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2ZBSiGuI_Cow",
+        "outputId": "1b182d2c-54e1-4f39-ee62-63aff4e025d0"
+      },
+      "source": [
+        "#Accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
+        "accuracy_score(y_test, y_pred)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9542857142857143"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nWl4jfZ7_Cxs",
+        "outputId": "4f7cb7e3-6bbb-4fe3-df98-750a4ef23a94"
+      },
+      "source": [
+        "#Sensitivity = TP / (TP + FN) ability to determine the patient cases (malignant tumors) correctly #Recall\n",
+        "61/(61+6)"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9104477611940298"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MXy8hIgn_C1O",
+        "outputId": "7b7d3898-6b69-4725-9198-8e25b70cff62"
+      },
+      "source": [
+        "#Specificity = TN / (TN + FP)  ability to determine the healthy cases (benign tumors) correctly\n",
+        "106/(106+2)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9814814814814815"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6bR08tVe_C8g",
+        "outputId": "dbb4b686-831a-4425-a2fe-f81791958232"
+      },
+      "source": [
+        "#Precision = TP / (TP + FP) the number of correct positive predictions made\n",
+        "61/(61+2)"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9682539682539683"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
         }
       ]
     }
