--- a/bc_logisticregressionclassifier.ipynb
+++ b/bc_logisticregressionclassifier.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "bc_logisticregressionclassifier.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOrmZgi9VaRbYDko5yXtzyi",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyPdZv0E3Q6MoS3C7iTlM3NV"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mehtamishah/Breast-Cancer-Detection/blob/main/bc_logisticregressionclassifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -33,7 +22,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -44,13 +33,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 238
         },
-        "outputId": "5758bf5d-25cd-4dca-f59b-73f4ff2baaaa"
+        "outputId": "34bfd918-c0c4-4a5c-9ba6-21fb09d022f8"
       },
       "source": [
         "dataset = pd.read_csv(\"breastcancer.csv\")\n",
         "dataset.head()"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -188,12 +177,12 @@
           "height": 351
         },
         "id": "1-sFrjjoeb75",
-        "outputId": "16d5cd7a-d3bc-42f4-d60a-f40ba1b39ddb"
+        "outputId": "b0dbc13c-4586-4548-c30d-8c060a18d9b5"
       },
       "source": [
         "dataset.describe()"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -364,7 +353,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 35
+          "execution_count": 3
         }
       ]
     },
@@ -375,12 +364,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DcSUF2YBfv-I",
-        "outputId": "61de95e9-f983-4022-db40-deb920534223"
+        "outputId": "56975dc6-59a8-40c9-c915-2f67c8d569f3"
       },
       "source": [
         "dataset['Bare Nuclei'].isna().sum()"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -392,7 +381,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 4
         }
       ]
     },
@@ -403,12 +392,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "doKeEBKzecOW",
-        "outputId": "abd08203-ff76-4dfe-ac75-3ca8240383db"
+        "outputId": "ae89cb9f-a65f-4aa6-8ac3-04f84d4e312e"
       },
       "source": [
         "dataset.dtypes"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -431,7 +420,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 5
         }
       ]
     },
@@ -442,12 +431,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hcl6NVMKBvs5",
-        "outputId": "e75a0298-9da2-4e6f-a320-ebf68651a619"
+        "outputId": "b318eb71-49eb-4a6c-de4c-5b89e5b9c394"
       },
       "source": [
         "dataset['Class'].value_counts()"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -461,7 +450,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 6
         }
       ]
     },
@@ -472,14 +461,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "177f5154-6eaf-4567-b137-c101815c5e54"
+        "outputId": "fd1f5cc8-a6a8-4982-8265-30e6529c67f8"
       },
       "source": [
         "X = dataset.iloc[:, 1:-1].to_numpy()\n",
         "y = dataset.iloc[:, -1].to_numpy()\n",
         "X[23:25, :]"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -492,7 +481,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 7
         }
       ]
     },
@@ -505,7 +494,7 @@
         "from sklearn.model_selection import train_test_split\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.25, random_state = 0)"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -515,7 +504,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rGnecGmIeDrL",
-        "outputId": "f9bafdb8-aa1d-476b-db40-893dccb8eaec"
+        "outputId": "b3830606-eee3-4d1b-9673-96a39f2b40dc"
       },
       "source": [
         "from sklearn.impute import SimpleImputer\n",
@@ -523,7 +512,7 @@
         "X_train = imputer.fit_transform(X_train)\n",
         "X_train[23:25,:]"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -536,7 +525,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 9
         }
       ]
     },
@@ -551,7 +540,7 @@
         "X_train = sc.fit_transform(X_train)\n",
         "#Feature scaling is not required unlike for svr, but it will improve performance in this case"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -561,14 +550,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "icHkmY7W9VGk",
-        "outputId": "204444a3-f3ab-4c9d-8683-8d30e5cb4e8f"
+        "outputId": "ec5e1352-b8aa-46e2-e0b9-eee07b5c51ba"
       },
       "source": [
         "from sklearn.linear_model import LogisticRegression\n",
         "classifier = LogisticRegression(random_state = 0)\n",
         "classifier.fit(X_train, y_train) #lower the C parameter more regularized the model (less overfitting)"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +573,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 11
         }
       ]
     },
@@ -598,7 +587,7 @@
         "X_test = imputer.transform(X_test)\n",
         "X_test = sc.transform(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -609,7 +598,7 @@
       "source": [
         "y_pred = classifier.predict(X_test)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -619,15 +608,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b3758cf8-4117-4671-b44e-e00a8670a1d0"
+        "outputId": "b1c6566b-9b5d-49bb-f718-c6a8035378b9"
       },
       "source": [
         "from sklearn.metrics import confusion_matrix, accuracy_score\n",
         "cm = confusion_matrix(y_test, y_pred)\n",
-        "print(cm)\n",
-        "accuracy_score(y_test, y_pred)"
+        "print(cm)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,18 +624,6 @@
             " [  3  60]]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0.9657142857142857"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 45
         }
       ]
     },
@@ -658,13 +634,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bSulXIf_9gTo",
-        "outputId": "26972f00-a7ef-439b-8349-4be713d7b62b"
+        "outputId": "d643b70d-41da-40c5-c074-01139529f73c"
       },
       "source": [
         "from sklearn.metrics import roc_auc_score\n",
         "roc_auc_score(y_test, y_pred)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -676,7 +652,123 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gtsMOTc4_x1X",
+        "outputId": "8b19cf26-3ee1-4ad2-9b1c-c9ac4a51bfc2"
+      },
+      "source": [
+        "#Accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
+        "accuracy_score(y_test, y_pred)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9657142857142857"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pVKZBtJR_x7z",
+        "outputId": "6caaa55a-f7ed-4adf-d417-b6124870b8c5"
+      },
+      "source": [
+        "#Sensitivity = TP / (TP + FN) ability to determine the patient cases (malignant tumors) correctly #Recall\n",
+        "60/(60+3)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9523809523809523"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eKtIq4aj_yEZ",
+        "outputId": "0629ba3d-44c3-4864-b446-4ac9d60260ca"
+      },
+      "source": [
+        "#Specificity = TN / (TN + FP)  ability to determine the healthy cases (benign tumors) correctly\n",
+        "109/(109+3)"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9732142857142857"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-2-aOr6W_yKr",
+        "outputId": "0e8e77aa-326f-415b-9662-b34a20a13aea"
+      },
+      "source": [
+        "#Precision = TP / (TP + FP) the number of correct positive predictions made\n",
+        "60/(60+3)"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9523809523809523"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
         }
       ]
     }
